--- a/DeploymentDemo/DeploymentDemo/Views/Shared/_Layout.cshtml
+++ b/DeploymentDemo/DeploymentDemo/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                 
                 <li>@Html.ActionLink("Home" , "Index" , "Home")</li>
                     <li>@Html.ActionLink("Student", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
                 </ul>
             </div>
